[gd_scene load_steps=4 format=3 uid="uid://gykdyw0fmbe0"]

[ext_resource type="Script" uid="uid://civu3esu7cueq" path="res://script/enemy.gd" id="1_f87vc"]
[ext_resource type="Texture2D" uid="uid://dm5pv1lby52xg" path="res://icon.svg" id="2_8u16h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iifgy"]

[node name="enemy" type="Area2D"]
script = ExtResource("1_f87vc")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
rotation = 1.56078
scale = Vector2(0.353772, 0.407937)
texture = ExtResource("2_8u16h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.39848, 2.60783)
shape = SubResource("RectangleShape2D_iifgy")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -29.0
offset_top = -56.0
offset_right = 27.0
offset_bottom = -29.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
